--- a/src/snippets/sdks.html
+++ b/src/snippets/sdks.html
@@ -85,7 +85,7 @@
               </a>
             </li>
             <li>
-              <a href='/blog' class='sdk-link'>
+              <a href='/react-web-core' class='sdk-link'>
                 <img src='/static/landing-page/sdk-icons/react.png' />
                 React
               </a>
